radio box texts changed

--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -26,13 +26,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "Farmer") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-1">
-                  Farmer (the grant is for my business)
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Farm manager" {{ checked("applicant", "Farm manager") }}>
-                <label class="govuk-label govuk-radios__label" for="applicant-2">
-                  Farm manager (the grant is for a business I work for)
+                  Farmer
                 </label>
               </div>
               <div class="govuk-radios__item">
