--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -24,62 +24,62 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="charity" {{ checked("legal-status", "charity") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-6">
-                  Charity
+                <input class="govuk-radios__input" id="legal-status-1" name="legal-status" type="radio" value="Ltd company" {{ checked("legal-status", "Ltd company") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-1">
+                  Ltd company
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-7" name="legal-status" type="radio" value="community interest organisation" {{ checked("legal-status", "community interest organisation") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-7">
-                  Community interest organisation
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="limited company" {{ checked("legal-status", "limited company") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-3">
-                  Limited company
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="limited liability partnership" {{ checked("legal-status", "limited liability partnership") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-5">
-                  Limited liability partnership
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-10" name="legal-status" type="radio" value="Local authority" {{ checked("legal-status", "Local authority") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-10">
-                  Local authority
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-2" name="legal-status" type="radio" value="partnership" {{ checked("legal-status", "partnership") }}>
+                <input class="govuk-radios__input" id="legal-status-2" name="legal-status" type="radio" value="Partnership" {{ checked("legal-status", "Partnership") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-2">
                   Partnership
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="public organisation" {{ checked("legal-status", "public organisation") }}>
+                <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="Sole trader" {{ checked("legal-status", "Sole trader") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-3">
+                  Sole trader
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-4" name="legal-status" type="radio" value="limited liability partnership" {{ checked("legal-status", "limited liability partnership") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-4">
+                  Limited liability partnership
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="Trust" {{ checked("legal-status", "Trust") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-5">
+                  Trust
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="Charity" {{ checked("legal-status", "Charity") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-6">
+                  Charity
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-7" name="legal-status" type="radio" value="Community interest organisation" {{ checked("legal-status", "Community interest organisation") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-7">
+                  Community interest organisation
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="Public organisation" {{ checked("legal-status", "Public organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-8">
                   Public organisation
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status" name="legal-status" type="radio" value="sole trader" {{ checked("legal-status", "sole trader") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status">
-                  Sole trader
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-4" name="legal-status" type="radio" value="trust" {{ checked("legal-status", "trust") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-4">
-                  Trust
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-9" name="legal-status" type="radio" value="none" {{ checked("legal-status", "none") }}>
+                <input class="govuk-radios__input" id="legal-status-9" name="legal-status" type="radio" value="Local authority" {{ checked("legal-status", "Local authority") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-9">
+                  Local authority
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-11" name="legal-status" type="radio" value="none" {{ checked("legal-status", "none") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-11">
                   Other
                 </label>
               </div>
