--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -18,8 +18,11 @@
       html: "Your reference number<br><strong>GDAA54X</strong>"
     }) }}
 
-    <p>We have emailed you a link to the full application form.</p>
-    <p>The grant is highly competitive and you are competing against other projects.</p>
+    <p>You will get an email with a record of your answers.</p>
+    <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
+    <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
+    <p>Monday to Friday, 9am to 5pm (expect public holidays)</p>
+    <a href="#" class="govuk-link">Find out about call charges</a>
 
     <h3 class="govuk-heading-m">What happens next</h3>
 
