deleted extra texts

--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -18,23 +18,13 @@
       html: "Your reference number<br><strong>GDAA54X</strong>"
     }) }}
 
+    <div class="govuk-warning-text">
     <p>You will get an email with a record of your answers.</p>
     <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
     <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
     <p>Monday to Friday, 9am to 5pm (expect public holidays)</p>
     <a href="#" class="govuk-link">Find out about call charges</a>
-
-    <h3 class="govuk-heading-m">What happens next</h3>
-
-    <p>If you submit a full application, we will:</p>
-    
-    <ul class="govuk-list govuk-list--bullet">
-    <li>assess the application against the others</li>
-    <li>consider how well it fits the priorities for funding </li>
-    <li>identify projects that provide the best value for taxpayers' money</li>
-    </ul>
-
-    <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
+    </div>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
