--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -17,13 +17,13 @@
       titleText: "Details submitted",
       html: "Your reference number<br><strong>GDAA54X</strong>"
     }) }}
-
-    <div class="govuk-warning-text">
-    <p>You will get an email with a record of your answers.</p>
-    <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
-    <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
-    <p>Monday to Friday, 9am to 5pm (expect public holidays)</p>
-    <a href="#" class="govuk-link">Find out about call charges</a>
+    <br>
+    <div class="govuk-body">
+      <p>You will get an email with a record of your answers.</p>
+      <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
+      <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
+      <p>Monday to Friday, 9am to 5pm (expect public holidays)</p>
+      <a href="#" class="govuk-link">Find out about call charges</a>
     </div>
 
     <div class="govuk-warning-text">
@@ -31,10 +31,19 @@
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">You must not start the project</span>
         You must not start the project<br><br>
-        You will need to make a full application and complete a grant funding agreement before you can start the project.
       </strong>
+      <p>Starting the project or committing to any costs (such as placing orders)<br>
+      before you recieve a funding agreement will invalidate your application.</p>
+      <p class="govuk-body">Before you start the project, you can:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>get quotes from suppliers</li>
+          <li>apply for planning permission on abstraction licence</li>
+        </ul>
+      <div class="govuk-body">  
+      <p><span class="govuk-body govuk-!-font-weight-bold">You will not automatically get a grant.</span>
+       The grant is expected to be highly competitive and you are competing against other projects.</p>
+      </div>
     </div>
-
   </div>
 </div>
 
