changed the text

--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -21,7 +21,7 @@
 
 <p>The Farming Transformation Fund water grant is to make more efficient use of water for irrigation and secure water supplies for crops.</p>
 <p>Grants can cover up to 40% of the eligible costs of a project.</p>
-<p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million.</p>
+<p>The minimum grant you can apply for is £35,000 (40% of £87,500). The maximum grant is £1 million.</p>
 <p>The grant can pay up to 40% of the costs for:</p>
 
 <ul>
