--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -37,8 +37,7 @@
       <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
     </ul>
 
-    <p>Depending on how well your project scores, you may want to submit your details to RPA to get the full application.</p>
-    <p>You will not automatically get a grant. The grant is highly competitive and you are competing against other projects.</p>
+    <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.</p>
 
     <a href="farming-type" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
