water-start : changed the before you start

--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -50,11 +50,9 @@
 
     <p>You need:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>information about your business (number of employees, turnover etc)</li>
-      <li>information about the project (irrigated land in hectares etc)</li>
-      <li>to know what items you'd like to buy for the project</li>
-      <li>an estimate of the total cost of the items</li>
-      <li>to either have or be confident you will have any planning permission and abstraction licences before 21 October 2021</li>
+      <li>information about your business (for example, number of employees and turnover)</li>
+      <li>information about the project (for example, irrigated land in hectares)</li>
+      <li>estimated total cost of the items you need</li>
     </ul>
 
   </div>
