added new inset text for the page

--- a/app/views/current/views/water/project-cost-fail.html
+++ b/app/views/current/views/water/project-cost-fail.html
@@ -12,17 +12,16 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
-      <h1 class="govuk-heading-l">
+     <h1 class="govuk-heading-l">
         You cannot apply for a large grant from this scheme
-      </h1>
+     </h1>
 
-      <p>To be eligible, the funding sought (40% of your total project costs) must be greater than £35,000.</p>
-
-      {% set grantAmount = data['project-cost'] * 0.4 %}
-
-      <p>Your total project costs of £{{ data['project-cost'] | toFixed(2) | commafy }} would result in £{{ grantAmount | toFixed(2) | commafy }} of funding sought.</p>
-
+    <div class="govuk-inset-text">
+      <p>You can only apply for a grant of up to 40% of the estimated costs.</p>
+      <p>The minimum grant you can apply for is £35,000(40% of £87,500).</p>
+      <p>The maximum grant is £1 million.</p>
+    </div>
+      
     </div>
   </div>
 
