--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -25,7 +25,7 @@
       <p>You will get an email with a record of your answers.</p>
       <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
       <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
-      <p>Monday to Friday, 9am to 5pm (expect public holidays)</p>
+      <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
       <a href="#" class="govuk-link">Find out about call charges</a>
     </div>
 
@@ -40,7 +40,7 @@
       <p class="govuk-body">Before you start the project, you can:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>get quotes from suppliers</li>
-          <li>apply for planning permission on abstraction licence</li>
+          <li>apply for planning permission or an abstraction licence</li>
         </ul>
       <div class="govuk-body">  
       <p><span class="govuk-body govuk-!-font-weight-bold">You will not automatically get a grant.</span>
