--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -34,7 +34,7 @@
                   <label class="govuk-label" for="conditional-country-postcode">
                     In which postcode will the project take place?
                   </label>
-                  <label class="govuk-label" for="postcode">Postcode</label>
+                  <label class="govuk-label  govuk-!-font-weight-bold" for="postcode">Postcode</label>
                   <input class="govuk-input govuk-!-width-one-third" id="postcode" name="postcode" type="text" value="{{ data['postcode'] }}" spellcheck="false" {{ checked("postcode", "postcode") }}>
                 </div>
               </div>
