added Help section for planning-permission

--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -48,6 +48,17 @@
                 </label>
               </div>
             </div>
+            <br><br>
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Help
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                Any planning permission required must be in place to submit a full application.
+              </div>
+            </details>
           </fieldset>
         </div>
 
