--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+<a class="govuk-back-link" href="../water/address-details">Back</a>
 {% endblock %}
 
 {% block content %}
