added hint for the productivity page

--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -13,11 +13,16 @@ productivity? {% endblock %} {% block beforeContent %}
               How will the project improve productivity?
             </h1>
           </legend>
-          <div id="email-hint" class="govuk-hint">
+          <br>
+          <div class="govuk-body">
+          <p>
             Productivity is about how much is produced relative to inputs (eg
             increased yield for the same inputs or the same yield with lower
             inputs).
+          </p>
+          <p class="govuk-caption-m">Select one or two options</p>
           </div>
+          <br>
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="productivity-1"
@@ -80,7 +85,7 @@ productivity? {% endblock %} {% block beforeContent %}
           </div>
         </fieldset>
       </div>
-
+      <br>
       <button
         class="govuk-button govuk-!-margin-right-1"
         data-module="govuk-button"
