project-items/added new checkboxes

--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -23,19 +23,13 @@
               </h1>
             </legend>
             <span id="project-items-hint" class="govuk-hint">
-              These are the items the grant will pay for.
+              The minimum grant you can apply for is £35,000 (40% of £87,500).The maximum grant is £1 million.
             </span>
 <h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items" name="project-items" type="checkbox" value="water meter" aria-describedby="project-item-hint" {{ checked("project-items", "water meter") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items">
-                  Water meter
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-2" name="project-items" type="checkbox" value="dam walls" {{ checked("project-items", "dam walls") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-2">
+                <input class="govuk-checkboxes__input" id="project-items-1" name="project-items" type="checkbox" value="dam walls" {{ checked("project-items", "dam walls") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-1">
                   Construction of dam walls
                 </label>
               </div>
@@ -106,29 +100,54 @@
                   Underground water distribution main and hydrants
                 </label>
               </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-items-13" name="project-items" type="checkbox" value="Electricity installation for pump house" {{ checked("project-items", "Electricity installation for pump house") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-13">
+                  Electricity installation for pump house
+                </label>
+              </div>
+
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-items-14" name="project-items" type="checkbox" value="water meter" {{ checked("project-items", "water meter") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-14">
+                  Water meter
+                </label>
+              </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Irrigation equipment</h2>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-13" name="project-items" type="checkbox" value="boom irrigators" {{ checked("project-items", "boom irrigators") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-13">
+                <input class="govuk-checkboxes__input" id="project-items-15" name="project-items" type="checkbox" value="boom irrigators" {{ checked("project-items", "boom irrigators") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-15">
                   Boom
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-14" name="project-items" type="checkbox" value="trickle irrigation equipment" {{ checked("project-items", "trickle irrigation equipment") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-14">
+                <input class="govuk-checkboxes__input" id="project-items-16" name="project-items" type="checkbox" value="trickle irrigation equipment" {{ checked("project-items", "trickle irrigation equipment") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-16">
                   Trickle
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-items-17" name="project-items" type="checkbox" value="Ebb and flood or capillary bed" {{ checked("project-items", "Ebb and flood or capillary bed") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-17">
+                  Ebb and flood or capillary bed
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-items-18" name="project-items" type="checkbox" value="Sprinklers and mist" {{ checked("project-items", "Sprinklers and mist") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-18">
+                  Sprinklers and mist
                 </label>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Technology</h2>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-15" name="project-items" type="checkbox" value="computer software" {{ checked("project-items", "computer software") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-15">
+                <input class="govuk-checkboxes__input" id="project-items-19" name="project-items" type="checkbox" value="computer software" {{ checked("project-items", "computer software") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-19">
                   Software to monitor soil moisture levels and schedule irrigation
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-16" name="project-items" type="checkbox" value="software and sensors" {{ checked("project-items", "software and sensors") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-16">
+                <input class="govuk-checkboxes__input" id="project-items-20" name="project-items" type="checkbox" value="software and sensors" {{ checked("project-items", "software and sensors") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-items-20">
                   Software and sensors to optimise water application
                 </label>
               </div>
