--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -28,7 +28,17 @@
       <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
       <a href="#" class="govuk-link">Find out about call charges</a>
     </div>
-
+    <br>
+    <div class="govuk-body">
+      <h2 class="govuk-heading-m">Problems with the service</h2>
+      <p>If you have any problems with the service, contact the RPA.</p>
+      <p>Telephone:<strong>03000 200 301</strong></p>
+      <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
+      <a href="#" alt="Find out about call charges">Find out about call charges</a>
+      <br><br>
+      <p>Email:<a href="#" alt="email">FTF@rpa.gov.uk</a></p>
+    </div>
+    <br>
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
