--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -25,20 +25,28 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    <h1 class="govuk-heading-l">
-      {% if serviceName %} {{ serviceName }} {% endif %}
-    </h1>
-
-    <p>Use this service to:</p>
-
-    <ul class="govuk-list govuk-list--bullet">
-      <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
-      <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
-    </ul>
-
-    <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.</p>
-
+     <div class="govuk-body">
+        <h1 class="govuk-heading-l">
+          {% if serviceName %} {{ serviceName }} {% endif %}
+        </h1>
+        <p>Use this service to:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
+          <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
+        </ul>
+        <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.</p>
+      </div>
+    <br>
+    <div class="govuk-body">
+      <h2 class="govuk-heading-m">Problems with the service</h2>
+      <p>If you have any problems with the service, contact the RPA.</p>
+      <p>Telephone:<strong>03000 200 301</strong></p>
+      <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
+      <a href="#" alt="Find out about call charges">Find out about call charges</a>
+      <br><br>
+      <p>Email: <a href="#" alt="email">FTF@rpa.gov.uk</a></p>
+    </div>
+    <br>
     <a href="farming-type" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
       <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
@@ -46,44 +54,15 @@
       </svg>
     </a>
 
-    <h2 class="govuk-heading-m">Before you start</h2>
-
-    <p>You need:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>information about your business (for example, number of employees and turnover)</li>
-      <li>information about the project (for example, irrigated land in hectares)</li>
-      <li>estimated total cost of the items you need</li>
-    </ul>
-
+    <div class="govuk-body">
+      <h1 class="govuk-heading-m">Before you start</h1>
+      <p>You need:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>information about your business (for example, number of employees and turnover)</li>
+        <li>information about the project (for example, irrigated land in hectares)</li>
+        <li>estimated total cost of the items you need</li>
+      </ul>
+    </div>
   </div>
-
-  <!--<div class="govuk-grid-column-one-third">
-
-      <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Subsection
-        </h2>
-        <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="govuk-list govuk-!-font-size-16">
-            <li>
-              <a href="#">
-                Related link
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Related link
-              </a>
-            </li>
-            <li>
-              <a href="#" class="govuk-!-font-weight-bold">
-                More <span class="govuk-visually-hidden">in Subsection</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </aside>
-
-    </div>-->
 </div>
 {% endblock %}
