added new class for  inline radio buttons

--- a/app/views/current/views/water/collaboration.html
+++ b/app/views/current/views/water/collaboration.html
@@ -23,7 +23,8 @@
               </h1>
               <h3 class="govuk-caption-m">If you intend to supply water via a water sharing agreement as a result of this project.</h3>
             </legend>
-            <div class="govuk-radios">
+
+            <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="collaboration" name="collaboration" type="radio" value="yes" {{ checked("collaboration", "yes") }}>
                 <label class="govuk-label govuk-radios__label" for="collaboration">
