changed the order of radio buttons

--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -24,9 +24,9 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-1" name="legal-status" type="radio" value="Ltd company" {{ checked("legal-status", "Ltd company") }}>
+                <input class="govuk-radios__input" id="legal-status-1" name="legal-status" type="radio" value="Sole trader" {{ checked("legal-status", "Sole trader") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-1">
-                  Ltd company
+                  Sole trader
                 </label>
               </div>
               <div class="govuk-radios__item">
@@ -36,39 +36,39 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="Sole trader" {{ checked("legal-status", "Sole trader") }}>
+                <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="Ltd company" {{ checked("legal-status", "Ltd company") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-3">
-                  Sole trader
+                  Ltd company
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-4" name="legal-status" type="radio" value="limited liability partnership" {{ checked("legal-status", "limited liability partnership") }}>
+                <input class="govuk-radios__input" id="legal-status-4" name="legal-status" type="radio" value="Charity" {{ checked("legal-status", "Charity") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-4">
-                  Limited liability partnership
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="Trust" {{ checked("legal-status", "Trust") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-5">
-                  Trust
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="Charity" {{ checked("legal-status", "Charity") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-6">
                   Charity
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-7" name="legal-status" type="radio" value="Community interest organisation" {{ checked("legal-status", "Community interest organisation") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-7">
-                  Community interest organisation
+                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="Public organisation" {{ checked("legal-status", "Public organisation") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-5">
+                  Public organisation
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="Public organisation" {{ checked("legal-status", "Public organisation") }}>
+                <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="Trust" {{ checked("legal-status", "Trust") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-6">
+                  Trust
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-7" name="legal-status" type="radio" value="limited liability partnership" {{ checked("legal-status", "limited liability partnership") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-7">
+                  Limited liability partnership
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="Community interest organisation" {{ checked("legal-status", "Community interest organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-8">
-                  Public organisation
+                  Community interest organisation
                 </label>
               </div>
               <div class="govuk-radios__item">
@@ -78,9 +78,9 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-11" name="legal-status" type="radio" value="none" {{ checked("legal-status", "none") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-11">
-                  Other
+                <input class="govuk-radios__input" id="legal-status-10" name="legal-status" type="radio" value="None" {{ checked("legal-status", "None") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-10">
+                   None of the above
                 </label>
               </div>
             </div>
