--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -23,7 +23,7 @@
           <label class="govuk-label" for="project-name">
               Project name
           </label>
-          <span id="project-name-hint" class="govuk-hint">eg Brown Hill Farm reservoir</span>
+          <span id="project-name-hint" class="govuk-hint">For example, Brown Hill Farm reservoir</span>
           <input class="govuk-input" id="project-name" name="project-name" type="text" value="{{ data['project-name'] }}">
         </div>
 
@@ -31,6 +31,7 @@
           <label class="govuk-label" for="business-name">
               Business name
           </label>
+          <span id="business-name-hint" class="govuk-hint">Enter business name as held by the Rural Payments Agency</span>
           <input class="govuk-input" id="business-name" name="business-name" type="text" value="{{ data['business-name'] }}">
         </div>
 
@@ -45,14 +46,18 @@
         <div class="govuk-form-group">
           <label class="govuk-label" for="turnover">
               Business turnover (£)
-            </label>
+          </label>
+          <div class="govuk-input__wrapper">
+          <div class="govuk-input__prefix" aria-hidden="true">£</div>  
           <input class="govuk-input govuk-input--width-10" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
+          </div>
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="sbi">
               SBI
-            </label>
+          </label>
+          <span id="sbi-hint" class="govuk-hint">If you do not have an SBI, leave it blank</span>
           <input class="govuk-input govuk-input--width-10" id="sbi" name="sbi" type="text" spellcheck="false" aria-describedby="sbi-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['sbi'] }}">
         </div>
 
