cleaned the code of  productivity page

--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -25,60 +25,32 @@ productivity? {% endblock %} {% block beforeContent %}
           <br>
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="productivity-1"
-              name="productivity" type="checkbox" value="Introduce or expand
-              high-value crops" {{ checked("productivity", "Introduce or expand
-              high-value crops") }}>
-              <label
-                class="govuk-label govuk-checkboxes__label"
-                for="productivity-1"
-              >
+              <input class="govuk-checkboxes__input" id="productivity-1" name="productivity" type="checkbox" value="Introduce or expand high-value crops" {{ checked("productivity", "Introduce or expand high-value crops") }}>
+              <label class="govuk-label govuk-checkboxes__label" for="productivity-1">
                 Introduce or expand high-value crops
               </label>
             </div>
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="productivity-2"
-              name="productivity" type="checkbox" value="Introduce or expand
-              protected crops" {{ checked("productivity", "Introduce or expand
-              protected crops") }}>
-              <label
-                class="govuk-label govuk-checkboxes__label"
-                for="productivity-2"
-              >
+              <input class="govuk-checkboxes__input" id="productivity-2" name="productivity" type="checkbox" value="Introduce or expand protected crops" {{ checked("productivity", "Introduce or expand protected crops") }}>
+              <label class="govuk-label govuk-checkboxes__label" for="productivity-2">
                 Introduce or expand protected crops
               </label>
             </div>
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="productivity-3"
-              name="productivity" type="checkbox" value="Increase yield per
-              hectare" {{ checked("productivity", "Increase yield per hectare")
-              }}>
-              <label
-                class="govuk-label govuk-checkboxes__label"
-                for="productivity-3"
-              >
+              <input class="govuk-checkboxes__input" id="productivity-3" name="productivity" type="checkbox" value="Increase yield per hectare" {{ checked("productivity", "Increase yield per hectare")}}>
+              <label class="govuk-label govuk-checkboxes__label" for="productivity-3">
                 Increase yield per hectare
               </label>
             </div>
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="productivity-4"
-              name="productivity" type="checkbox" value="Improve quality" {{
-              checked("productivity", "Improve quality") }}>
-              <label
-                class="govuk-label govuk-checkboxes__label"
-                for="productivity-4"
-              >
+              <input class="govuk-checkboxes__input" id="productivity-4" name="productivity" type="checkbox" value="Improve quality" {{checked("productivity", "Improve quality") }}>
+              <label class="govuk-label govuk-checkboxes__label" for="productivity-4">
                 Improve quality
               </label>
             </div>
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="productivity-5"
-              name="productivity" type="checkbox" value="Maintain productivity"
-              {{ checked("productivity", "Maintain productivity") }}>
-              <label
-                class="govuk-label govuk-checkboxes__label"
-                for="productivity-5"
-              >
+              <input class="govuk-checkboxes__input" id="productivity-5" name="productivity" type="checkbox" value="Maintain productivity" {{ checked("productivity", "Maintain productivity") }}>
+              <label class="govuk-label govuk-checkboxes__label" for="productivity-5">
                 Maintain productivity
               </label>
             </div>
